--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css">
+  
 </head>
 <body>
-    
+    <div id="personal-greeting">
+        <p>"Hi! This is my personal greeting to you!"</p>
+    </div>
+    <div id="info">
+        <p>My name is Taran! I live in Kenya.</p>
+        <button id="clickme">
+            Click Me!
+        </button>
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html>
